# waldo

./: .bash_history  .bashrc  .gitconfig  README.md  test.py
.ssh/: id_ed25519  id_ed25519.pub  known_hosts  known_hosts.old
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/motor_interfaces/share/motor_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
ros2_ws/install/motor_interfaces/share/motor_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_motor_interfaces__rosidl_generator_pyExport.cmake  motor_interfacesConfig-version.cmake  motor_interfacesConfig.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  (+1 more)
ros2_ws/install/motors/lib/motors/: arm  drive
ros2_ws/install/motors/share/motors/: package.bash  package.dsv  package.ps1  package.sh  package.xml
ros2_ws/install/yolo_msgs/share/yolo_msgs/: package.sh
ros2_ws/install/yolo_ros/share/yolo_ros/: package.sh
ros2_ws/log/: latest_build
ros2_ws/src/: DistanceEstimation.py
ros2_ws/src/config/: camera_gnd.yaml
ros2_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/src/log/: latest_build
ros2_ws/src/motor_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/motor_interfaces/srv/: ArmPos.srv
ros2_ws/src/motors/: package.xml  setup.py
ros2_ws/src/motors/motors/: arm_positon.py  drivetrain.py
(+85 files in other folders)
